[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Actors/Player/BossWeapons/CrystalBouncer/SolidPhaser.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 16, 32 )

[node name="SolidPhaser" type="Node2D"]
position = Vector2( 3104, -176 )
script = ExtResource( 1 )

[node name="playerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="playerDetector"]
shape = SubResource( 40 )

[node name="rigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 512
collision_mask = 0
mode = 3

[node name="collisionShape2D" type="CollisionShape2D" parent="rigidBody2D"]
shape = SubResource( 40 )
disabled = true

[connection signal="body_exited" from="playerDetector" to="." method="_on_player_exited"]
